# cmu-10714-hw3

./: hw3.ipynb  pyproject.toml
.github/workflows/: main.yaml
python/needle/backend_ndarray/: ndarray.py
src/: ndarray_backend_cpu.cc
