[tool.poetry]
name = "cmu-10414-hw3"
version = "0.1.0"
description = ""
authors = ["Justin Chu <justinchuby@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "needle", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.2"
pybind11 = "^2.10.0"
pytest = "^7.1.3"
mugrade = { git = "https://github.com/dlsyscourse/mugrade.git" }
beartype = "^0.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.8.0"
pylint = "^2.15.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
